# mcm

./: .dockerignore  .gitignore  Dockerfile  README.md  auth.py  database.py  main.py  main_v2.py  pyproject.toml  schema.sql  setup.sh
.github/workflows/: docker-publish.yml
scripts/: start-with-auth.ps1
scripts/screenshots/: capture.js  dashboard.html  login.html  package-lock.json  server.html
templates/: index.html  login.html  server.html  test.html
tests/: conftest.py  test_auth.py  test_file_browser.py
